updated missing images for module icons, updates su-goals styles for z's specs. updatesd icon sizing on menus and dialog displays to show 25%, updated custom icon to have correct color, removed slider ticks from guuey-slider

--- a/src/elements/guuey-slider/guuey-slider.html
+++ b/src/elements/guuey-slider/guuey-slider.html
@@ -31,6 +31,7 @@
         width:100%;
         --paper-slider-height:5px;
         padding-bottom:15px;
+        --paper-slider-markers-color:transparent;
       }
       .spectrumDescriptor{
         text-transform:uppercase;
