--- a/src/icons/custom-icons.html
+++ b/src/icons/custom-icons.html
@@ -14,7 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <iron-iconset-svg name="custom" size="24">
   <svg id="su-drawer" data-name="su drawer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36">
     <defs>
-      <style>.cls-1{fill:none;}.cls-2{fill:#5d5d5d;}</style>
+      <style>.cls-1{fill:none;}.cls-2{fill:#cecece;}</style>
     </defs>
     <title>profile_mobile</title>
     <rect class="cls-1" width="36" height="36"/>
