--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -141,7 +141,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       top:10%;
       height:20px;
       width:20px;
-      padding:5px;
+      padding:3px;
       margin:0;
       background-color:#e51561;
       color:#FFFFFF;
@@ -367,7 +367,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     paper-tab.iron-selected{
       background-color:#303D95;
     }
-    paper-tab iron-icon{
+    .mobileTab{
       --iron-icon-height:40px;
       --iron-icon-width:40px;
     }
