updated icon sizes, updated su drawer style sizes of module icon and divider, updated su-risk edit page to use styles propozed by z

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -593,7 +593,9 @@
 
     <paper-toast
       id="mainToast"
-      class="fit-bottom">
+      class="fit-bottom"
+      duration="15000">
+      <paper-button on-tap="_closeToast">close</paper-button>
     </paper-toast>
 
   </template>
@@ -990,6 +992,9 @@
       openToast:function(e){
         this.$.mainToast.text=e.detail.toastText;
         this.$.mainToast.open();
+      },
+      _closeToast:function(){
+        this.$.mainToast.close();
       },
       openDrawer:function(){
         this.$.suDrawer.open();
