--- a/src/pages/care-plan/su-monthly-reports/su-monthly-reports.html
+++ b/src/pages/care-plan/su-monthly-reports/su-monthly-reports.html
@@ -51,7 +51,7 @@
 
       <su-header
         id="suHeader"
-        page="Daily Reports"
+        page="Monthly Reports"
         patient="[[patient]]"
         home="[[home]]"
         su-index-data="{{suIndexData}}"
