updated to align left and right labels with the slider

--- a/src/elements/guuey-slider/guuey-slider.html
+++ b/src/elements/guuey-slider/guuey-slider.html
@@ -7,11 +7,11 @@
       :host{
         display:block;
         padding-bottom:20px;
+        width:100%;
       }
       .sliderContainer{
         display:flex;
         flex-direction:row;
-        padding:10px;
       }
       .innerContainer{
         position:relative;
@@ -27,6 +27,8 @@
         padding:0 0 15px 10px;
       }
       #slider{
+        margin:0;
+        padding:0;
         align-self: center;
         width:100%;
         --paper-slider-height:5px;
@@ -42,13 +44,13 @@
       #noRisk{
         position:absolute;
         bottom:5px;
-        left:5px;
+        left:17px;
         opacity:.8;
       }
       #danger{
         position:absolute;
         bottom:5px;
-        right:5px;
+        right:17px;
         opacity:.8;
       }
     </style>
