--- a/src/pages/care-plan/su-view-reports/su-view-reports.html
+++ b/src/pages/care-plan/su-view-reports/su-view-reports.html
@@ -64,6 +64,7 @@
         margin:20px;
       }
       #reportSelector{
+        width:75%;
         --paper-tabs-selection-bar-color:#009688;
         --paper-tabs-container:{
           border-bottom:2px solid #979797;
@@ -127,7 +128,7 @@
     <paper-card class="pageCard">
       <su-header
         id="suHeader"
-        page="Daily Reports"
+        page="View Reports"
         patient="[[patient]]"
         home="[[home]]"
         su-index-data="{{suIndexData}}"
